Price updater and fiat currency + endpoint (#828)
Price Updater refactor
Fiat prices implementation
This commit modifies the config file!
