# api/swagger.yml
@@ -1169,6 +1169,82 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error503'
+  '/currencies':
+    get:
+      tags:
+        - Explorer
+      summary: Get information of the fiat currencies.
+      description: Get information of the fiat currencies.
+      operationId: getFiatCurrencies
+      parameters:
+        - name: symbols
+          in: query
+          required: false
+          description: Include only specific currencies by their symbols.
+          schema:
+            type: string
+            description: pipeline symbol "|" separate list of currencies symbols.
+            example: "EUR|CNY"
+      responses:
+        '200':
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Currencies'
+        '400':
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error400'
+        '500':
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error500'
+  '/currencies/{symbol}':
+    get:
+      tags:
+        - Explorer
+      summary: Get information of a fiat currency.
+      description: Get information of a fiat currency.
+      operationId: getFiatCurrency
+      parameters:
+        - name: symbol
+          in: path
+          required: true
+          description: Include only a specific currency by its symbol.
+          schema:
+            type: string
+            description: Currency symbol.
+            example: "EUR"
+      responses:
+        '200':
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Currency'
+        '400':
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error400'
+        '404':
+          description: Not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error404'
+        '500':
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error500'
   '/tokens':
     get:
       tags:
@@ -2484,6 +2560,42 @@ components:
             $ref: '#/components/schemas/Token'
         pendingItems:
           $ref: '#/components/schemas/PendingItems'
+    Currency:
+      type: object
+      description: Hermez Network compatible and registered currency.
+      properties:
+        currency:
+          type: string
+          description: symbol of the currency
+          example: EUR
+        baseCurrency:
+          type: string
+          description: symbol of the base currency
+          example: USD
+        price:
+          type: number
+          description: Value of the currency in USD.
+          example: 1.01
+          nullable: true
+        lastUpdate:
+          type: string
+          format: date-time
+          description: Timestamp of the moment the `USD` value was updated.
+          nullable: true
+      required:
+        - currency
+        - baseCurrency
+        - price
+        - lastUpdate
+      additionalProperties: false
+    Currencies:
+      type: object
+      properties:
+        currencies:
+          type: array
+          description: List of Currencies.
+          items: 
+            $ref: '#/components/schemas/Currency'
     Exit:
       type: object
       description: Exit tree leaf. It Contains the necessary information to perform a withdrawal.
